--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -1,15 +1,10 @@
 ---
-#knit: (function(inputFile, encoding = "UTF-8") { rmarkdown::render(inputFile, encoding = encoding, output_file = 'cisreg_GWAS_report2.html', output_dir = "cisreg_GWAS_report_2019-08") })
+# knit: (function(inputFile, encoding = encoding) { rmarkdown::render(inputFile, encoding = encoding, output_file = 'cisreg_GWAS_report2.html', output_dir = "~/cisreg-GWAS_results_2019-08") })
 title: "Detection of  regulatory SNPs in GWAS studies"
 author: 'Yvon Mbouamboua, Pascal Rihet, Thi-Thuy-Nga Nguyen, Andrew Parton, Aziz Khan & Jacques van Helden '
 date: "`r Sys.Date()`"
 always_allow_html: yes
 output:
-  pdf_document:
-    fig_caption: yes
-    highlight: zenburn
-    toc: yes
-    toc_depth: 3
   html_document:
     code_folding: hide
     fig_caption: yes
@@ -19,6 +14,11 @@ output:
     toc: yes
     toc_depth: 3
     toc_float: yes
+  pdf_document:
+    fig_caption: yes
+    highlight: zenburn
+    toc: yes
+    toc_depth: 3
   ioslides_presentation:
     colortheme: dolphin
     fig_caption: yes
@@ -64,7 +64,7 @@ bibliography: bibliography.bib
 editor_options:
   chunk_output_type: console
 font-family: Garamond
-font-import: http://fonts.googleapis.com/css ?family=Risque
+font-import: http://fonts.googleapis.com/css?family=Risque
 csl: biomed-central.csl
 subtitle: Disease
 address: TAGC lab, Aix-Marseille Université, France
@@ -81,19 +81,20 @@ ptm <- proc.time()
 
 
 
-```{r parameters, echo=FALSE}
+```{r parameters, echo=FALSE, results=FALSE, warning=FALSE}
 
 ## Define user-specified parameters for the analyses
 ## Parameters
 parameters <- list(
-  # query =  "EFO_0001068", # malaria
-  query =  "EFO_0008407", # tuberculosis
+  query =  "EFO_0001068", # malaria
+  # query =  "EFO_0008407", # tuberculosis
   # query = "HP_0100806", # sepsis
-  #query = "EFO_0000249", # Alzheimer's disease
-  #query = "EFO_0001360", # type ii diabetes mellitus
+  # query = "EFO_0000249", # Alzheimer's disease
+  # query = "EFO_0000692" # schizophrenia
+  # query = "EFO_0001360", # type ii diabetes mellitus
   trait = NA,
   ld.pop.prefix = "1000GENOMES:phase_3:",
-  population = "EUR",  ## BEWARE, the population should be adapted to the query !
+  population = "AFR",  ## BEWARE, the population should be adapted to the query !
   # population = "AFR",  ## BEWARE, the population should be adapted to the query !
   working.dir = getwd(),
   output.dir = "~/cisreg-GWAS_results",
@@ -210,8 +211,7 @@ cran.libraries.to.install <-
     "xml2",
     "RCurl",
     "data.table",
-    # "gProfileR",
-    "DOSE"
+    # "gProfileR"
   )     
 
 
@@ -239,7 +239,8 @@ bioconductor.libraries.to.install <- c(
   "XGR",  ## For xEnrichSNPs and related graph representations
   #"FunciSNP",
   "TissueEnrich",
-  "grImport2"
+  "grImport2",
+  "DOSE"
 )
 
 message("Loading Bioconductor libraries")
@@ -628,11 +629,11 @@ studiesPerSNP <- as.data.frame.table(sort(table(gwas.results$SNPS), decreasing =
 names(studiesPerSNP) <- c("SNP", "N")
 
 ## Select the SNPs with an "rs" IDs
-rsID <- as.vector(
+rsIDs <- as.vector(
   grep(pattern = '^rs\\d+',
        studiesPerSNP$SNP, 
        perl = TRUE, value = TRUE))
-nb.rsID <- length(unique(rsID))
+nb.rsIDs <- length(unique(rsIDs))
 
 
 ## Summarize the results obtained so far
@@ -642,7 +643,7 @@ workflowSummary <- append(workflowSummary, c(
 #  "Non-redundant SNPs" = nrow(studiesPerSNP),
   "SNPs demonstrated by >1 studies" = nrow(subset(studiesPerSNP, N > 1)),
   "SNPs demonstrated by 1 study" = nrow(subset(studiesPerSNP, N == 1)),
-  "SNPs with rsID" = nb.rsID)
+  "SNPs with rsID" = nb.rsIDs)
 )
 
 ## Print the summmary
@@ -696,7 +697,7 @@ workflowSummary["valid rsIDs for BioMart"] <- nb.valid.DA.snp.ID
 
 
 
-```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". **A. ** Disease-associated SNPs per chromosome. **B. ** Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="50%", fig.width=6, fig.height=8}
+```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),"**. **A. ** Disease-associated SNPs per chromosome. **B. ** Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="80%", fig.width=6, fig.height=8}
 
 par(mfrow = c(1,2)) 
 #par.ori <- par(no.readonly = TRUE)
@@ -750,17 +751,20 @@ LDsnpIDs <- vector()
 # LdSNPstats <- data.frame()
 ldGroups <- list()
   
-i <- 0 ## Instantiate counter
-for (rsID in valid.DA.snp.ID) {
-  i <- i + 1
+# i <- 0 ## Instantiate counter
+# for (current.rsID in valid.DA.snp.ID) {
+#  i <- i + 1
+i <- 1 ## Instantiate counter
+for (i in 1:length(valid.DA.snp.ID)) {
+  current.rsID <- valid.DA.snp.ID[i]
   
   ## Generate the URL to address a query to ENSEMBL via their REST interface
-  ldURL <- paste(sep = "", 
-                 "http://rest.ensembl.org/ld/human/", rsID, "/",
+  ldURL <- paste0("http://rest.ensembl.org/ld/human/", current.rsID, "/",
                  parameters$ld.pop.prefix, parameters$population,
                  "?content-type=application/json",
                  "&r2=", parameters$r2, 
                  "&window_size=", as.character(parameters$ld.distance))
+  message("\t\t", ldURL)
 
   newLdSNPs <- fromJSON(ldURL, simplifyDataFrame = TRUE, flatten = TRUE)
   
@@ -784,18 +788,18 @@ for (rsID in valid.DA.snp.ID) {
   ## Add the DA SNP to the LD SNPs with correlation of 1
   # LdSNPs <- rbind(LdSNPs, 
   #                 data.frame(
-  #                   variation1 = rsID,
-  #                   variation2 = rsID,
+  #                   variation1 = current.rsID,
+  #                   variation2 = current.rsID,
   #                   r2 = 1,
   #                   d_prime = 1,
   #                   population = parameters$population
   #                 ))
   
-  ldGroups[[rsID]] <- c(rsID, as.vector(currentLdSNPs$variation2))
+  ldGroups[[current.rsID]] <- c(current.rsID, as.vector(currentLdSNPs$variation2))
   
 #   ## This is a auick hacky solution; zill need to be updated
 #   variationURL <- paste(sep = "", 
-#                  "http://rest.ensembl.org/variation/human/", rsID,
+#                  "http://rest.ensembl.org/variation/human/", current.rsID,
 #                  "?content-type=application/json")
 #   newVqrSNPs <- fromJSON(variationURL, simplifyDataFrame = TRUE)
 #   names(newVqrSNPs)
@@ -804,22 +808,23 @@ for (rsID in valid.DA.snp.ID) {
   # View(ldSNPs)
   nbNewSNPIDs <- length(newLdSNpIDs)
   if (nbNewSNPIDs > parameters$max.ld.per.snp) {
-    message("\t\tWarning: number of LD for tag SNP ", rsID, " (", nbNewSNPIDs,
+    message("\t\tWarning: number of LD for tag SNP ", current.rsID, " (", nbNewSNPIDs,
             ") exceeds limit (", parameters$max.ld.per.snp, "). ",
             "\n\tLD SNPs are ignored for this Tag SNP. ")
   } else if (length(newLdSNpIDs) > 0) {
     LDsnpIDs <- append(LDsnpIDs, newLdSNpIDs)
   }
   message("\tDA SNP", 
+          "\t", format(Sys.time(), "%X"), 
           "\t", i, "/", nb.valid.DA.snp.ID, 
-           "\t", rsID, 
+           "\t", current.rsID, 
           "\t", nbNewSNPIDs, " LD SNPs",
-          "\tCurrent total: ", length(LDsnpIDs))
+          "\tTotal: ", length(LDsnpIDs))
 
   # ## Add info on the number of LD SNPs to the table describing DA SNPs
   # LdSNPstats <- rbind(LdSNPstats,
   #                     data.frame(
-  #                       rsID = rsID,
+  #                       rsID = current.rsID,
   #                       LD.SNPs = nbNewSNPIDs,
   #                       cumLD.SNPs = length(LDsnpIDs)
   #                     ))
@@ -857,7 +862,7 @@ kable(head(LdSNPs), caption = paste0(
 
 
 
-```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "40%", fig.width=5, fig.height=8}
+```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "60%", fig.width=5, fig.height=8}
 
 # Draw a barplot of SNPs in LD
 nb.ld.snps <- sort(table(as.vector(LdSNPs$variation1)))
@@ -1003,7 +1008,7 @@ SOIsBed.gr <- with(SOIsBed,
                             strand   = Rle("*"), rsid = snp))
 
 
-## Export rsID of SOIs in txt format
+## Export rsIDs of SOIs in txt format
 outfiles["SOI IDs (txt)"] <- file.path(
   result.dir.path["SOIs"], 
   paste(sep = "", parameters$query, "_SOI_IDs", ".txt"))
@@ -1048,7 +1053,7 @@ write.table(x = SOIs,
 
 
 
-```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic feature of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
+```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic features of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
 par(mfrow = c(2,2)) 
 par.ori <- par(no.readonly = TRUE)
 par(mar = c(5.1, 5.1, 3.1, 2.1))
@@ -1067,7 +1072,7 @@ barplot(height = sort(table(snpInfo$chr_name), decreasing = FALSE),
 
 ## Barplot with the distribution of SNPs in different types 
 ## of genomic regions  ("consequence type")
-par(mar = c(5.1, 10.1, 3.1, 2.1))
+par(mar = c(5.1, 12.1, 3.1, 2.1))
 ld.df <- sort(table(snpInfo$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(ld.df)
 x <- barplot(height = ld.df,
@@ -1099,7 +1104,7 @@ barplot(height = sort(table(SOIs$chr_name), decreasing = FALSE),
 
 ## Barplot with the distribution of SNPs in different types 
 ## of genomic regions  ("consequence type")
-par(mar = c(5.1, 10.1, 3.1, 2.1))
+par(mar = c(5.1, 12.1, 3.1, 2.1))
 soi.df <- sort(table(SOIs$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(soi.df)
 x <- barplot(height = soi.df,
@@ -1473,6 +1478,7 @@ if (parameters$RSAT.rest) {
           outfiles["RSAT retrieve-variation-seq (varSeq)"])
 
   #### RSAT variation-scan ####
+  stop("RSAT variation-scan seems to have a problem. Please submit the analysis via thee web site")
   
   ## Build the API request for Variation-scan and submit it
   message("Scanning variant alleles with motifs via RSAT REST services")
@@ -2777,7 +2783,7 @@ if (nrow(rSNPs.info) == 0) {
 
 
 
-## Result symmary
+## Result summary
 
 ```{r result_summary}
 
