--- a/cisreg-GWAS_wf/cisreg-GWAS.Rmd
+++ b/cisreg-GWAS_wf/cisreg-GWAS.Rmd
@@ -1,15 +1,10 @@
 ---
-# knit: (function(inputFile, encoding = encoding) { rmarkdown::render(inputFile, encoding = encoding, output_file = 'cisreg_GWAS_report2.html', output_dir = "~/cisreg-GWAS_results_2019-08") })
+#knit: (function(inputFile, encoding = "UTF-8") { rmarkdown::render(inputFile, encoding = encoding, output_file = 'cisreg_GWAS_report2.html', output_dir = "cisreg_GWAS_report_2019-08") })
 title: "Detection of  regulatory SNPs in GWAS studies"
 author: 'Yvon Mbouamboua, Pascal Rihet, Thi-Thuy-Nga Nguyen, Andrew Parton, Aziz Khan & Jacques van Helden '
 date: "`r Sys.Date()`"
 always_allow_html: yes
 output:
-  pdf_document:
-    fig_caption: yes
-    highlight: zenburn
-    toc: yes
-    toc_depth: 3
   html_document:
     code_folding: hide
     fig_caption: yes
@@ -19,6 +14,11 @@ output:
     toc: yes
     toc_depth: 3
     toc_float: yes
+  pdf_document:
+    fig_caption: yes
+    highlight: zenburn
+    toc: yes
+    toc_depth: 3
   ioslides_presentation:
     colortheme: dolphin
     fig_caption: yes
@@ -64,7 +64,7 @@ bibliography: bibliography.bib
 editor_options:
   chunk_output_type: console
 font-family: Garamond
-font-import: http://fonts.googleapis.com/css?family=Risque
+font-import: http://fonts.googleapis.com/css ?family=Risque
 csl: biomed-central.csl
 subtitle: Disease
 address: TAGC lab, Aix-Marseille Université, France
@@ -80,27 +80,24 @@ ptm <- proc.time()
 ```
 
 
-```{r parameters, echo=FALSE, results=FALSE, warning=FALSE, message=FALSE}
+
+```{r parameters, echo=FALSE}
 
 ## Define user-specified parameters for the analyses
 ## Parameters
 parameters <- list(
-  query =  "EFO_0001068", # malaria
-<<<<<<< HEAD
-  #query =  "EFO_0008407", # tuberculosis
-=======
-  # query =  "EFO_0008407", # tuberculosis
->>>>>>> 86c2fabe921e1263c898d9e9419b63ee30e4428c
+  #query =  "EFO_0001068", # malaria
+  query =  "EFO_0008407", # tuberculosis
   # query = "HP_0100806", # sepsis
-  # query = "EFO_0000249", # Alzheimer's disease
-  # query = "EFO_0000692" # schizophrenia
-  # query = "EFO_0001360", # type ii diabetes mellitus
+  #query = "EFO_0000249", # Alzheimer's disease
+  #query = "EFO_0001360", # type ii diabetes mellitus
+  #query = "HP_0002014", # diarrhea
   trait = NA,
   ld.pop.prefix = "1000GENOMES:phase_3:",
-  population = "AFR",  ## BEWARE, the population should be adapted to the query !
+  population = "EUR",  ## BEWARE, the population should be adapted to the query !
   # population = "AFR",  ## BEWARE, the population should be adapted to the query !
   working.dir = getwd(),
-  output.dir = file.path(Sys.getenv("HOME"), "cisreg-GWAS_results"),
+  output.dir = "~/cisreg-GWAS_results",
   r2 = 0.8,
   ld.distance = 200,
   max.ld.per.snp = 500, # ignore LDs for a given tag SNP if there are more too many of them
@@ -175,8 +172,8 @@ knitr::opts_chunk$set(
   ## Maybe related to these reported issue:
   ##     https://github.com/rstudio/rmarkdown/issues/429
   ##     https://github.com/rstudio/rmarkdown/issues/587
-#  fig.path = "figures/",
-  fig.path = file.path(parameters$figure.dir, paste0(parameters$query, "_")),
+  fig.path = "figures/",
+#  fig.path = file.path(parameters$figure.dir, paste0(parameters$query, "_")),
 #  fig.path = file.path("figures", paste0(parameters$query, "_")),
   size = "tiny", 
   warning = FALSE, 
@@ -213,8 +210,9 @@ cran.libraries.to.install <-
     "httr",
     "xml2",
     "RCurl",
-    "data.table"
-    # "gProfileR"
+    "data.table",
+    # "gProfileR",
+    "DOSE"
   )     
 
 
@@ -242,8 +240,7 @@ bioconductor.libraries.to.install <- c(
   "XGR",  ## For xEnrichSNPs and related graph representations
   #"FunciSNP",
   "TissueEnrich",
-  "grImport2",
-  "DOSE"
+  "grImport2"
 )
 
 message("Loading Bioconductor libraries")
@@ -632,11 +629,11 @@ studiesPerSNP <- as.data.frame.table(sort(table(gwas.results$SNPS), decreasing =
 names(studiesPerSNP) <- c("SNP", "N")
 
 ## Select the SNPs with an "rs" IDs
-rsIDs <- as.vector(
+rsID <- as.vector(
   grep(pattern = '^rs\\d+',
        studiesPerSNP$SNP, 
        perl = TRUE, value = TRUE))
-nb.rsIDs <- length(unique(rsIDs))
+nb.rsID <- length(unique(rsID))
 
 
 ## Summarize the results obtained so far
@@ -646,7 +643,7 @@ workflowSummary <- append(workflowSummary, c(
 #  "Non-redundant SNPs" = nrow(studiesPerSNP),
   "SNPs demonstrated by >1 studies" = nrow(subset(studiesPerSNP, N > 1)),
   "SNPs demonstrated by 1 study" = nrow(subset(studiesPerSNP, N == 1)),
-  "SNPs with rsID" = nb.rsIDs)
+  "SNPs with rsID" = nb.rsID)
 )
 
 ## Print the summmary
@@ -700,11 +697,11 @@ workflowSummary["valid rsIDs for BioMart"] <- nb.valid.DA.snp.ID
 
 
 
-```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),"**. **A. ** Disease-associated SNPs per chromosome. **B. ** Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="80%", fig.width=6, fig.height=8}
+```{r da_snps_barplot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". **A. ** Disease-associated SNPs per chromosome. **B. ** Genomic context of disease-associated SNPs from GWAS catalog.** "), out.width="50%", fig.width=6, fig.height=8}
 
 par(mfrow = c(1,2)) 
-#par.ori <- par(no.readonly = TRUE)
-par(mar = c(5.1, 8, 9.1, 1.1))
+par.ori <- par(no.readonly = TRUE)
+par(mar = c(5.1, 5.1, 3.1, 2.1))
 ## Draw a barplot with the number of disease-associated SNPs per chromosome
 barplot(height = sort(table(DA.snpInfo$chr_name), decreasing = FALSE), 
         #main = "Disease-associated SNPs per chromosome",
@@ -716,6 +713,10 @@ barplot(height = sort(table(DA.snpInfo$chr_name), decreasing = FALSE),
         col = "#BBDDFF",
         cex.names = 0.7, 
         las = 1)
+
+## Draw a barplot with the number of SNPs by genomic context
+## assign all the SNPs without documented consequence type to the "unknown" class
+tagSNPsInfo$CONTEXT[tagSNPsInfo$CONTEXT == ""] <- "unknown"
 
 df <- sort(table(tagSNPsInfo$CONTEXT),  decreasing = FALSE)
 max.context <- length(df)
@@ -754,20 +755,17 @@ LDsnpIDs <- vector()
 # LdSNPstats <- data.frame()
 ldGroups <- list()
   
-# i <- 0 ## Instantiate counter
-# for (current.rsID in valid.DA.snp.ID) {
-#  i <- i + 1
-i <- 1 ## Instantiate counter
-for (i in 1:length(valid.DA.snp.ID)) {
-  current.rsID <- valid.DA.snp.ID[i]
+i <- 0 ## Instantiate counter
+for (rsID in valid.DA.snp.ID) {
+  i <- i + 1
   
   ## Generate the URL to address a query to ENSEMBL via their REST interface
-  ldURL <- paste0("http://rest.ensembl.org/ld/human/", current.rsID, "/",
+  ldURL <- paste(sep = "", 
+                 "http://rest.ensembl.org/ld/human/", rsID, "/",
                  parameters$ld.pop.prefix, parameters$population,
                  "?content-type=application/json",
                  "&r2=", parameters$r2, 
                  "&window_size=", as.character(parameters$ld.distance))
-  message("\t\t", ldURL)
 
   newLdSNPs <- fromJSON(ldURL, simplifyDataFrame = TRUE, flatten = TRUE)
   
@@ -791,18 +789,18 @@ for (i in 1:length(valid.DA.snp.ID)) {
   ## Add the DA SNP to the LD SNPs with correlation of 1
   # LdSNPs <- rbind(LdSNPs, 
   #                 data.frame(
-  #                   variation1 = current.rsID,
-  #                   variation2 = current.rsID,
+  #                   variation1 = rsID,
+  #                   variation2 = rsID,
   #                   r2 = 1,
   #                   d_prime = 1,
   #                   population = parameters$population
   #                 ))
   
-  ldGroups[[current.rsID]] <- c(current.rsID, as.vector(currentLdSNPs$variation2))
+  ldGroups[[rsID]] <- c(rsID, as.vector(currentLdSNPs$variation2))
   
 #   ## This is a auick hacky solution; zill need to be updated
 #   variationURL <- paste(sep = "", 
-#                  "http://rest.ensembl.org/variation/human/", current.rsID,
+#                  "http://rest.ensembl.org/variation/human/", rsID,
 #                  "?content-type=application/json")
 #   newVqrSNPs <- fromJSON(variationURL, simplifyDataFrame = TRUE)
 #   names(newVqrSNPs)
@@ -811,23 +809,22 @@ for (i in 1:length(valid.DA.snp.ID)) {
   # View(ldSNPs)
   nbNewSNPIDs <- length(newLdSNpIDs)
   if (nbNewSNPIDs > parameters$max.ld.per.snp) {
-    message("\t\tWarning: number of LD for tag SNP ", current.rsID, " (", nbNewSNPIDs,
+    message("\t\tWarning: number of LD for tag SNP ", rsID, " (", nbNewSNPIDs,
             ") exceeds limit (", parameters$max.ld.per.snp, "). ",
             "\n\tLD SNPs are ignored for this Tag SNP. ")
   } else if (length(newLdSNpIDs) > 0) {
     LDsnpIDs <- append(LDsnpIDs, newLdSNpIDs)
   }
   message("\tDA SNP", 
-          "\t", format(Sys.time(), "%X"), 
           "\t", i, "/", nb.valid.DA.snp.ID, 
-           "\t", current.rsID, 
+           "\t", rsID, 
           "\t", nbNewSNPIDs, " LD SNPs",
-          "\tTotal: ", length(LDsnpIDs))
+          "\tCurrent total: ", length(LDsnpIDs))
 
   # ## Add info on the number of LD SNPs to the table describing DA SNPs
   # LdSNPstats <- rbind(LdSNPstats,
   #                     data.frame(
-  #                       rsID = current.rsID,
+  #                       rsID = rsID,
   #                       LD.SNPs = nbNewSNPIDs,
   #                       cumLD.SNPs = length(LDsnpIDs)
   #                     ))
@@ -865,7 +862,7 @@ kable(head(LdSNPs), caption = paste0(
 
 
 
-```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "60%", fig.width=5, fig.height=8}
+```{r ld_snp_plot, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". SNPs in linkage disequilibrium (LD).** "), out.width = "40%", fig.width=5, fig.height=8}
 
 # Draw a barplot of SNPs in LD
 nb.ld.snps <- sort(table(as.vector(LdSNPs$variation1)))
@@ -938,28 +935,30 @@ snpInfo <- snpInfo[!duplicated(snpInfo$refsnp_id),]
 
 ```{r DA_LD_SNPs, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic context of disease-associated (DA) SNPs and LD SNPs.** "), out.width = "80%", fig.width=8, fig.height=4.5}
 
-# Barplot of genomic context of DA and LD SNPs
+## Barplot of genomic context of DA and LD SNPs
+## assign all the SNPs without documented consequence type to the "unknown" class
 snpInfo$consequence_type_tv[snpInfo$consequence_type_tv == ""] <- "unknown"
 
 # barplot(sort(table(snpInfo$consequence_type_tv), decreasing = TRUE),
 #         #main = "Genomic context of DA and LD SNPs",
 #         las=2, cex.names = 0.7, col = "#207DC2", xlab="", ylab="Number of SNPs",)
 
-# Create a data frame
-Context <- snpInfo$consequence_type_tv
-DA.df <- data.frame(sort(table(Context), decreasing = FALSE))
-
-## Make the frequencies numbers (rather than factors)
-DA.df$Freq <- as.numeric(as.character(DA.df$Freq))
-
 #Barplot of genomic context of DA-SNPs
-ggplot(data = DA.df, aes(x = Context, y = Freq)) +
-  geom_bar(stat = "identity", fill = "#999966", color = "black") +
-  geom_text(aes(label = Freq), vjust = -0.1, hjust = -0.5, size = 4) +
-  xlab("Genomic context") +
-  ylab("Frequency") +
-  theme_test() +
-  coord_flip()
+ld.df <- sort(table(snpInfo$consequence_type_tv),  decreasing = FALSE)
+max.context <- length(ld.df)
+x <- barplot(height = ld.df,
+        #main = "Disease-associated SNPs per chromosome",
+        xlim = c(0, max(ld.df)*1.1),
+        cex.axis = 1,
+        main = "B",
+        xlab = "SNPs",
+        cex.lab = 1,
+        horiz = T, 
+        col = "#006699",
+        cex.names = 1, 
+        las = 1)
+text(x = ld.df[1:max.context], y = x, labels = ld.df[1:max.context], cex = 0.7, pos = 4)
+
 
 
 ```
@@ -1011,7 +1010,7 @@ SOIsBed.gr <- with(SOIsBed,
                             strand   = Rle("*"), rsid = snp))
 
 
-## Export rsIDs of SOIs in txt format
+## Export rsID of SOIs in txt format
 outfiles["SOI IDs (txt)"] <- file.path(
   result.dir.path["SOIs"], 
   paste(sep = "", parameters$query, "_SOI_IDs", ".txt"))
@@ -1056,7 +1055,7 @@ write.table(x = SOIs,
 
 
 
-```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic features of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
+```{r genomic_context_of_SOIs, out.width = "100%", fig.width=8, fig.height=10, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Genomic feature of the SNPs of Interest (SOIs)** **A. ** Number of the SOIs per chromosome. **B. ** Genomic context of the SOIs, which  were selected by discarding all SNPs in conding regions (e.g. synonymous_variant, missense_variant).")}
 par(mfrow = c(2,2)) 
 par.ori <- par(no.readonly = TRUE)
 par(mar = c(5.1, 5.1, 3.1, 2.1))
@@ -1075,7 +1074,7 @@ barplot(height = sort(table(snpInfo$chr_name), decreasing = FALSE),
 
 ## Barplot with the distribution of SNPs in different types 
 ## of genomic regions  ("consequence type")
-par(mar = c(5.1, 12.1, 3.1, 2.1))
+par(mar = c(5.1, 10.1, 3.1, 2.1))
 ld.df <- sort(table(snpInfo$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(ld.df)
 x <- barplot(height = ld.df,
@@ -1107,7 +1106,7 @@ barplot(height = sort(table(SOIs$chr_name), decreasing = FALSE),
 
 ## Barplot with the distribution of SNPs in different types 
 ## of genomic regions  ("consequence type")
-par(mar = c(5.1, 12.1, 3.1, 2.1))
+par(mar = c(5.1, 10.1, 3.1, 2.1))
 soi.df <- sort(table(SOIs$consequence_type_tv),  decreasing = FALSE)
 max.context <- length(soi.df)
 x <- barplot(height = soi.df,
@@ -1481,7 +1480,6 @@ if (parameters$RSAT.rest) {
           outfiles["RSAT retrieve-variation-seq (varSeq)"])
 
   #### RSAT variation-scan ####
-  stop("RSAT variation-scan seems to have a problem. Please submit the analysis via thee web site")
   
   ## Build the API request for Variation-scan and submit it
   message("Scanning variant alleles with motifs via RSAT REST services")
@@ -2365,7 +2363,7 @@ kable(head(rSNPs.info.display), caption = "Predicted regulatory SNPs")
 
 We using `ChIPseeker` R package to annotate the ChIP-seq peaks co-localised with the rSNPs. We presente the genomic annotations of the ChIP-seq paeks co-localised with the rSNPs
 
-```{r peak_annotation_rSNPs, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1),". Pieplot of genomic annotation. Annotation of the location of a given peak in terms of genomic features.** "), out.width = "80%", fig.width=8, fig.height=4.5}
+```{r peak_annotation_rSNPs, fig.cap=paste(sep="", "**Figure ",(fig.nb <- fig.nb +1)," Annotation of the location of a given peak in terms of genomic features.** "), out.width = "80%", fig.width=8, fig.height=4.5}
 
 if (nrow(rSNPs.info) == 0) {
   message("The merging between RSAT variation-scan and ReMap ChIP-seq peaks did not return a single predicted rSNP. Skipping peak annotations. ")
@@ -2786,7 +2784,7 @@ if (nrow(rSNPs.info) == 0) {
 
 
 
-## Result summary
+## Result symmary
 
 ```{r result_summary}
 
@@ -2794,6 +2792,19 @@ kable(as.data.frame(workflowSummary),
       caption = "Summary of the results.",
       col.names = "Results")
 
+
+ write.table(x = as.data.frame(workflowSummary))
+ 
+ 
+ outfiles["GWAS-SNP associations (REST)"] <- file.path(
+    result.dir.path["Ensembl"],
+    paste(sep = "", parameters$query, "_gwas-catalog_REST", ".tsv"))
+  
+ 
+ table1 <- as.data.frame(workflowSummary)
+ 
+  write.table(x = table1, file = outfiles["GWAS-SNP associations (REST)"] , 
+              quote = FALSE, row.names = TRUE, col.names = TRUE, sep = "\t")
 ```
 
 
